# WorkReportNext

./: LICENSE  README.md
WorkReport2/: README.md  index.html  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
WorkReport2/mock/: form_mock.ts  memo_mock.ts  mock.ts  table_mock.ts  timeline_mock.ts
WorkReport2/src/: App.vue  main.ts
WorkReport2/src/assets/css/: base.css  main.css
WorkReport2/src/assets/img/: 110106-am-impact-zorg-websites.json  92013-abstract-blue-and-yellow.json  96215-loading-blue.json  blooming-2025.json  chatting-Illustration.json
WorkReport2/src/assets/js/: common.ts  itemform.ts  itemtable.ts  login.ts  memo.ts  meno.ts  timeline.ts  types.ts
WorkReport2/src/components/LoginView/: Login.vue  SuperInit.vue  UserInfo.vue
WorkReport2/src/router/: index.ts
WorkReport2/src/stores/: counter.ts
WorkReport2/src/views/: LoginView.vue  MainView.vue  managerView.vue  statisticsView.vue
WorkReport2BackEnd/: pyproject.toml
WorkReport2BackEnd/src/: main.py  main.spec
WorkReport2BackEnd/src/apiRoute/: affair.py  item.py  login.py  memo.py  option.py
WorkReport2BackEnd/src/config/: backend_conf.py
WorkReport2BackEnd/src/dataModel/: affairs_data.py  item_data.py  memo_data.py  model_version.py  option_data.py  user_data.py
WorkReport2BackEnd/static/: index.html
WorkReport2BackEnd/static/assets/: index-0ccf3066.css  index-0e93c1d9.css  index-12b9db7c.css  index-398fe94f.js  index-5081611b.css  index-595cc93d.css  index-a5d5d2c3.css  index-bed2ff75.js  index-c89503b2.js  index-d09d5671.css  index-d4f3a690.js
(+10 files in other folders)
